--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -136,7 +136,9 @@ It is composed from multiple processes. Each of these processes belongs to one o
 \section{Summary}
 
 % hlavny pokec o naplnani biznis ciela prezentacia absolventov
-Samotny informacny system je dostupny sirokej verejnosti cez webove rozhranie. Standardny neprihlaseny navstevnik oznacovany ako verejnost ma moznost vylistovat si zoznam absolventov podla jednotlivych rokov ukoncenia a podla studijnych odborov. Na kazdeho absolventa je mozne kliknut a tym vyvolat podrobnejsie informacie o konkretnom absolventovi.  Uroven podrobnosti je obmedzena zakonom o oosbnych informaciach a tak defaultne ma absolvent zobrazene iba meno, priezvisko, rok ukoncenia a ukonceny studijny odbor. Snahou fakulty je vsak aj spropagovat svojich absolventov. Preto maju moznost zadat uz aj ako studenti do systemu svoje dalsie udaje ako pracovne skusenosti a znalosti, pricom ak suhlasia mozu nechat tieto udaje zobrazit aj verejnosti vo svojoch podrobnych informaciach o sebe. Zadane udaje sluzia aj ako vstupne pre zivotopis, ktory je mozne automaticky vygenerovat vo formate pdf suboru. Ako bolo spomenute, zverjenenie dalsich informacii je plne v kompetencii absolventa. Takto zverjnene udaje su dostupne sirokej verejnosti. Verejnost zahrnuje aj webove vyhladavace a ich crawlers pomocou ktorych si moza absolvent budovat svoju virtualnu webovu identitu na internete.
+Samotny informacny system je dostupny sirokej verejnosti cez webove rozhranie. Standardny neprihlaseny navstevnik oznacovany ako verejnost ma moznost vylistovat si zoznam absolventov podla jednotlivych rokov ukoncenia a podla studijnych odborov. Na kazdeho absolventa je mozne kliknut a tym vyvolat podrobnejsie informacie o konkretnom absolventovi.  Uroven podrobnosti je obmedzena zakonom o oosbnych informaciach a tak defaultne ma absolvent zobrazene iba meno, priezvisko, rok ukoncenia a ukonceny studijny odbor. Snahou fakulty je vsak aj spropagovat svojich absolventov. Preto maju moznost zadat uz aj ako studenti do systemu svoje dalsie udaje ako pracovne skusenosti a znalosti, pricom ak suhlasia mozu nechat tieto udaje zobrazit aj verejnosti vo svojoch podrobnych informaciach o sebe. Zadane udaje sluzia aj ako vstupne pre zivotopis, ktory je mozne automaticky vygenerovat vo formate pdf suboru. Ako bolo spomenute, zverejenenie dalsich informacii je plne v kompetencii absolventa. Takto zverjnene udaje su dostupne sirokej verejnosti. Verejnost zahrnuje aj webove vyhladavace a ich crawlers pomocou ktorych si moza absolvent budovat svoju virtualnu webovu identitu na internete.
+% hlavny pokec o naplnani biznis ciela ziskavania informacii od absolventov z praxe
+Problem spatnej vazby od absolventa smerom k skole riesi Alumni pomoco u anketoveho modulu. V tomto module ma skola moznost nadefinovat si otazky a aj moznosyi odpovedi, ktore nasledne aktivny absolventi vyplnia. Je iba na skole aky druh a sposob navoli. Vyuzitie tohto modulu sa predpoklada predovsetkym na ziskavanie osobitnych informacii, ktore za normalnych okolnosti nepatria do profilu absolventa, avsak maju velku informacnu hodnotu pre skolu. 
 
 pokec o tom co sme tu popisali a preco je ALUMNI prinosny pre fakultu aj studenta 
   
