Prelozeny Janov nocny pridavok

--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -136,11 +136,15 @@ It is composed from multiple processes. Each of these processes belongs to one o
 \section{Summary}
 
 % hlavny pokec o naplnani biznis ciela prezentacia absolventov
-Samotny informacny system je dostupny sirokej verejnosti cez webove rozhranie. Standardny neprihlaseny navstevnik oznacovany ako verejnost ma moznost vylistovat si zoznam absolventov podla jednotlivych rokov ukoncenia a podla studijnych odborov. Na kazdeho absolventa je mozne kliknut a tym vyvolat podrobnejsie informacie o konkretnom absolventovi.  Uroven podrobnosti je obmedzena zakonom o oosbnych informaciach a tak defaultne ma absolvent zobrazene iba meno, priezvisko, rok ukoncenia a ukonceny studijny odbor. Snahou fakulty je vsak aj spropagovat svojich absolventov. Preto maju moznost zadat uz aj ako studenti do systemu svoje dalsie udaje ako pracovne skusenosti a znalosti, pricom ak suhlasia mozu nechat tieto udaje zobrazit aj verejnosti vo svojoch podrobnych informaciach o sebe. Zadane udaje sluzia aj ako vstupne pre zivotopis, ktory je mozne automaticky vygenerovat vo formate pdf suboru. Ako bolo spomenute, zverejenenie dalsich informacii je plne v kompetencii absolventa. Takto zverjnene udaje su dostupne sirokej verejnosti. Verejnost zahrnuje aj webove vyhladavace a ich crawlers pomocou ktorych si moza absolvent budovat svoju virtualnu webovu identitu na internete.
+%Samotny informacny system je dostupny sirokej verejnosti cez webove rozhranie. Standardny neprihlaseny navstevnik oznacovany ako verejnost ma moznost vylistovat si zoznam absolventov podla jednotlivych rokov ukoncenia a podla studijnych odborov. Na kazdeho absolventa je mozne kliknut a tym vyvolat podrobnejsie informacie o konkretnom absolventovi.  Uroven podrobnosti je obmedzena zakonom o oosbnych informaciach a tak defaultne ma absolvent zobrazene iba meno, priezvisko, rok ukoncenia a ukonceny studijny odbor. Snahou fakulty je vsak aj spropagovat svojich absolventov. Preto maju moznost zadat uz aj ako studenti do systemu svoje dalsie udaje ako pracovne skusenosti a znalosti, pricom ak suhlasia mozu nechat tieto udaje zobrazit aj verejnosti vo svojoch podrobnych informaciach o sebe. Zadane udaje sluzia aj ako vstupne pre zivotopis, ktory je mozne automaticky vygenerovat vo formate pdf suboru. Ako bolo spomenute, zverejenenie dalsich informacii je plne v kompetencii absolventa. Takto zverjnene udaje su dostupne sirokej verejnosti. Verejnost zahrnuje aj webove vyhladavace a ich crawlers pomocou ktorych si moza absolvent budovat svoju virtualnu webovu identitu na internete.
 % hlavny pokec o naplnani biznis ciela ziskavania informacii od absolventov z praxe
-Problem spatnej vazby od absolventa smerom k skole riesi Alumni pomoco u anketoveho modulu. V tomto module ma skola moznost nadefinovat si otazky a aj moznosyi odpovedi, ktore nasledne aktivny absolventi vyplnia. Je iba na skole aky druh a sposob navoli. Vyuzitie tohto modulu sa predpoklada predovsetkym na ziskavanie osobitnych informacii, ktore za normalnych okolnosti nepatria do profilu absolventa, avsak maju velku informacnu hodnotu pre skolu. 
+%Problem spatnej vazby od absolventa smerom k skole riesi Alumni pomoco u anketoveho modulu. V tomto module ma skola moznost nadefinovat si otazky a aj moznosyi odpovedi, ktore nasledne aktivny absolventi vyplnia. Je iba na skole aky druh a sposob navoli. Vyuzitie tohto modulu sa predpoklada predovsetkym na ziskavanie osobitnych informacii, ktore za normalnych okolnosti nepatria do profilu absolventa, avsak maju velku informacnu hodnotu pre skolu. 
 
-pokec o tom co sme tu popisali a preco je ALUMNI prinosny pre fakultu aj studenta 
+Information system is available for general public through web interface. Not registered visitor can look over the list of graduates according to year of ending or field of study. He can also look through graduates profiles. Level of profile details show to public is limited. By default public visitor can only see name, surname of graduate, year of end and field of study. The faculty effort is to propagate their graduates. Therefore graduates can also add some information about themselves into the system during the study such as working experiences, knowledge. Graduates can allow displaying this information in their profiles for public visitors. Inserted information can be used as an input for generating graduate`s curriculum vitae in pdf format, which is provided automatically. It is graduates competence, which information will be displayed in their profiles and will be shown to general public. Public also includes searching pages with their crawlers. This can graduate use for building his virtual web identity on internet. 
+
+Problem with graduate’s feedback towards to faculty our system Alumni solved with inquiry module. In this module faculty can define questions with answers, which will active graduates respond. Its faculty choice, which way they will choose. This module should be used for collecting data about graduates, which are not included in graduates profiles and they have high information value for faculty.
+
+%pokec o tom co sme tu popisali a preco je ALUMNI prinosny pre fakultu aj studenta 
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \acknowledgement{This work was partially supported by the Institute of Informatics and Software Engineering, Faculty of Informatics and Information Technologies, Slovak University of Technology in Bratislava.}
