--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -85,10 +85,13 @@ Alumni is web based application that can be accessed using common web browser. T
 \fig{width=12cm, bb = 0 0 831 683}{images/screen1.png}{fig:scr1}{Basic user interface.}
 
 The most important functions are:
-%- najdolezitesie poskytovane funkcie, zaujime problemy ktore sme museli vyriesit, co sme zmenili, co pripravilo problemy atd.
-Authentification
-Comunication
-Presentation
+The most important functions are:
+\begin{itemize}
+\item Actualities
+\item Mail communication
+\item Personal presentation
+\item Statistical module
+\end{itemize}
 
 \section{Architecture}
 
