opravená angličtina v pokece o absolventoch

--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -48,7 +48,7 @@ Information system for communication with graduates represents only one of many 
 
 Communication between graduates and university can be an advantage for both sides. In this article we would shortly introduce web based software system called ALUMNI developed on Team project. Our faculty has ambitions to present graduates to public society. The faculty also wants to stay in touch with graduates using web application, providing a channel for profesional and social communication between graduates each other and faculty. The focus of ALUMNI project is to design and implement a system that would accomplish this needs. 
 
-Every graduate of FIIT STU studied at this faculty for at least three years or eventually more. During this period graduates tied up a lot of social contact with classmates as well as with teachers. These contacts are typically cut off after graduating or the only rarely continue. Generally speaking, after the student leaves the university, he lost most of the contacts. This trend of breaking all contacts is not wanted by the faculty. The faculty sees the graduates as potential bussines partners with possibility to cooperated after study. Graduates are very good source of information and critics that could help inproove the quality of faculty. The best way to gain required information are feedback forms.
+Every graduate of FIIT STU studied at this faculty for at least three years or eventually more. During this period graduates establish a lot of social contacts with classmates as well as with teachers. These contacts are typically broken after graduating, only rarely they continue. Generally after student leaves the university, he losts most of his contacts. This trend of loosing contacts is not wanted by the faculty. The faculty sees the graduates as potential bussines partners with possibility to cooperate after study. Graduates are very good source of information and critics that could help to inproove the quality of faculty. The best way to gain required information are feedback forms.
 
 %* dalsia motivacia, vyhody pre fakultu
 
