opravene chyby v anglictine - v celej dokumentacii - business, professional, atd

--- a/doc/iitsrc/dokumentacia.tex
+++ b/doc/iitsrc/dokumentacia.tex
@@ -46,24 +46,24 @@ Information system for communication with graduates represents only one of many 
 
 \section{Introduction}
 
-Communication between graduates and university can be an advantage for both sides. In this article we would shortly introduce web based software system called ALUMNI developed on Team project. Our faculty has ambitions to present graduates to public society. The faculty also wants to stay in touch with graduates using web application, providing a channel for profesional and social communication between graduates each other and faculty. The focus of ALUMNI project is to design and implement a system that would accomplish this needs. 
+Communication between graduates and university can be an advantage for both sides. In this article we would shortly introduce web based software system called ALUMNI developed on Team project. Our faculty has ambitions to present graduates to public society. The faculty also wants to stay in touch with graduates using web application, providing a channel for professional and social communication between graduates each other and faculty. The focus of ALUMNI project is to design and implement a system that would accomplish these needs. 
 
-Every graduate of FIIT STU studied at this faculty for at least three years or eventually more. During this period graduates establish a lot of social contacts with classmates as well as with teachers. These contacts are typically broken after graduating, only rarely they continue. Generally after student leaves the university, he losts most of his contacts. This trend of loosing contacts is not wanted by the faculty. The faculty sees the graduates as potential bussines partners with possibility to cooperate after study. Graduates are very good source of information and critics that could help to inproove the quality of faculty. The best way to gain required information are feedback forms.
+Every graduate of FIIT STU studied at this faculty for at least three years or eventually more. During this period graduates establish a lot of social contacts with classmates as well as with teachers. These contacts are typically broken after graduating, only rarely they continue. Generally after student leaves the university, he losts most of his contacts. This trend of loosing contacts is not wanted by the faculty. The faculty sees the graduates as potential business partners with possibility to cooperate after study. Graduates are very good source of information and critics that could help to improve the quality of faculty. The best way to gain required information is feedback form.
 
 %* dalsia motivacia, vyhody pre fakultu
 
 %Kazdy absolvent FIIT STU navstevoval tuto fakultu minimalne tri roky, pripadne viac. Počas tohto obdobia nadviazal absolvent množstvo sociálnych kontaktov so svojimi spolužiakmi a tiež so vyučujúcimi. Po ukončení sa tieto kontakty zvyčajne pretrhnú a len málokedy pokračujú ďalej. Predovšetkým tie s vyučujúcimi, všeobecne povedané absolvent stratí akékoľvek kontakty s fakultou. Táto skutočnosť však nie je v záujme fakulty a s veľkou pravdepodobnosťou k tomuto zisteniu dospeje aj absolvent vo svojom ďalšom živote. Tento trend, pretrhnutie kontaktov, je považovaný na fakulte za nežiadúci. Fakulta totiž vidí vo svojich absolventoch ľudí, s ktorými chce spolupracovať aj po ukončení štúdia, chce od nich získavať podnety a pripomienky, ktoré by premietla do svojho budúceho smerovania a do svojho zlepšovania. Ako najprijateľnejšiu formu kooperácie absolventov so fakultou sa z pohľadu fakulty javí spätná väzba a získavanie priamych informácii a názorov od absolventov. K naplneniu tejto vízie zo strany fakulty by mal prispieť aj navrhovaný systém na prezentáciu absolventov ALUMNI,
 
-\section{Bussines goals}
+\section{Business goals}
 
 {\em Present basic information about graduates to the public.}
-It means providing the creation and maintainance  of the graduates database a presenting basic information about individuals to the public on the web without access restrictions. We suppose brief information about a graduate, whed he studied and graduated, his specialization, topic of his bachelor and diploma project, possibly the abstracts. The presentation could also involve graphical expresion of employment and skills of the graduaetes from different views, if we could get nessesery informations.
+It means providing the creation and maintenance of the graduates’ database presenting basic information about individuals to the public on the web without access restrictions. We suppose brief information about a graduate, when he studied and graduated, his specialization, topic of his bachelor and diploma project, possibly the abstracts. The presentation could also involve graphical expression of employment and skills of the graduates from different views, if we could get necessary information.
 
 {\em Provide gathering of actual informations about graduates in practice to the faculty.} 
-It means to get actual informations about contact, job, career development, application/proffesional focus, areas of a graduate activity and personal interests, etc. This informations are provided by graduates. This informations have personal character, it means getting them require interest in contact on the both sides and this data should be under protection whith well-organized authorized access.
+It means to get actual informations about contact, job, career development, application/professional focus, areas of a graduate activity and personal interests, etc. These informations are provided by graduates. These informations have personal character, it means getting them requires interest in contact on the both sides and this data should be under protection with well-organized authorized access.
 
 {\em Enable communication to graduates.}
-It should be easy and safe way to communicate in informatics community protected by well-designed access rights for groups of authorized participants. It should be used for informal information exchange in community of colleagues, coevals, experts from practice, wich are provided to the community. Except for providing contact the system can inform graduates about professional activities of the community, provide a place for them - a forum, eventualy some other activities.
+It should be easy and safe way to communicate in informatics community protected by well-designed access rights for groups of authorized participants. It should be used for informal information exchange in community of colleagues, coevals, experts from practice, which are provided to the community. Except for providing contact the system can inform graduates about professional activities of the community, provide a place for them - a forum, eventually some other activities.
 
 %Ciele systému:
 %Prezentovať základné informácie o absolventoch verejnosti.
@@ -95,25 +95,25 @@ The most important functions are:
 
 \section{Architecture}
 
-The best accessibility for graduates and public viewers is the main requirement for design architecture. Architecture type client-server based on web technologies fulfills this requirement. Whole interaction between system runs on internet browser, which is common part of operating system and doesn’t depend of application part of server. Business logic and functionality is implemented right on server and it depends on actual implementation.
+The best accessibility for graduates and public viewers is the main requirement for design architecture. Architecture type client-server based on web technologies fulfils this requirement. Whole interaction between systems runs on internet browser, which is common part of operating system and doesn’t depend of application part of server. Business logic and functionality is implemented right on the server and it depends on actual implementation.
 
-Logic system on the side of server is divided into several modules, which provide whole functionality of system. All modules are created on PHP framework CakePHP,  which is rapid development kit. This framework makes our job with system much more easier, because it has already included solutions for basic problems in web application development as authentication, database access, presentation and more other.
+Logic system on the side of server is divided into several modules, which provide whole functionality of system. All modules are created on PHP framework CakePHP, which is rapid development kit. This framework makes our job with system much more easier, because it has already included solutions for basic problems in web application development as authentication, database access, presentation and more other.
 
 CakePHP fully supports MVC (Model-View-Controller) model \cite{cakephp}. This model divided system into three functional parts Model, View, Controller. Relations between these parts are shown on Figure ~\ref{fig:mvc}. 
 
 \fig{width=7cm}{images/mvc}{fig:mvc}{Model-View-Controller.}
 
-{\em Model.} Represents the part, which takes care of collecting and storing data. This means database or controlling scripts, which executes actions on this database. Data gather in the part Model are provided to the part View.
+{\em Model.} Represents the part, which takes care of collecting and storing data. This means database or controlling scripts, which executes actions on this database. Data gathered in the part Model are provided to the part View.
 
-{\em View.} This part takes care of data presentation to user. This mean user interface.  View part in web systems represents HTML output, which will display in internet browser as an internet web page. View part represents presentation part of the system, which can include also presentation logic.
+{\em View.} This part takes care of data presentation to user. This means user interface. View part in web systems represents HTML output, which will display in internet browser as an internet web page. View part represents presentation part of the system, which can include also presentation logic.
 
 {\em Controller.} Part controller takes care of administration executed actions by user of by system. These actions are transmitted as changes in View part or in Model part. Under change in View part we mean for example page changes. Under change in Model part it’s for example saving new information to the database. Controller can include also business logic.
       
 \section{Conclusion}
 
-Information system is available for general public through web interface. Not registered visitor can look over the list of graduates according to year of ending or field of study. He can also look through graduates profiles. Level of profile details show to public is limited. By default public visitor can only see name, surname of graduate, year of end and field of study. The faculty effort is to propagate their graduates. Therefore graduates can also add some information about themselves into the system during the study such as working experiences, knowledge. Graduates can allow displaying this information in their profiles for public visitors. Inserted information can be used as an input for generating graduate`s curriculum vitae in pdf format, which is provided automatically. It is graduates competence, which information will be displayed in their profiles and will be shown to general public. Public also includes searching pages with their crawlers. This can graduate use for building his virtual web identity on internet. 
+Information system is available for general public through web interface. Not registered visitor can look over the list of graduates according to year of ending or field of study. He can also look through graduates profiles. Level of profile details shown to public is limited. By default public visitor can only see name, surname of graduate, year of end and field of study. The faculty effort is to propagate their graduates. Therefore graduates can also add some information about themselves into the system during the study such as working experiences or knowledge. Graduates can allow displaying this information in their profiles for public visitors. Inserted information can be used as an input for generating graduate’s curriculum vitae in pdf format, which is provided automatically. It is graduate’s competence, which information will be displayed in their profiles and will be shown to general public. Public also includes searching pages with their crawlers. This can graduate use for building his virtual web identity on internet. 
 
-Problem with graduate’s feedback towards to faculty our system Alumni solved with inquiry module. In this module faculty can define questions with answers, which will active graduates respond. Its faculty choice, which way they will choose. This module should be used for collecting data about graduates, which are not included in graduates profiles and they have high information value for faculty.
+Problem with graduate’s feedback towards to faculty our system Alumni solved with inquiry module. In this module faculty can define questions with answers, which will active graduates respond. It is choice of faculty, which way they will choose. This module should be used for collecting data about graduates which are not included in graduates’ profiles and they have high information value for faculty.
 
   
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
